--- a/css/font.css
+++ b/css/font.css
@@ -3,6 +3,7 @@
     src: url('../fonts/PingFangSC-Regular.otf');
     font-weight: normal;
     font-style: normal;
+    font-display: swap;
 }
 
 @font-face {
@@ -10,6 +11,7 @@
     src: url('../fonts/PingFangSC-Semibold.otf');
     font-weight: bold;
     font-style: normal;
+    font-display: swap;
 }
 
 @font-face {
@@ -17,6 +19,7 @@
     src: url('../fonts/PingFangSC-Medium.otf');
     font-weight: 500;
     font-style: normal;
+    font-display: swap;
 }
 
 @font-face {
@@ -24,6 +27,7 @@
     src: url('../fonts/PingFangSC-Light.otf');
     font-weight: 300;
     font-style: normal;
+    font-display: swap;
 }
 
 @font-face {
@@ -31,6 +35,7 @@
     src: url('../fonts/PingFangSC-Ultralight.otf');
     font-weight: 200;
     font-style: normal;
+    font-display: swap;
 }
 
 @font-face {
@@ -38,4 +43,5 @@
     src: url('../fonts/PingFangSC-Thin.otf');
     font-weight: 100;
     font-style: normal;
+    font-display: swap;
 }
