--- a/css/style.css
+++ b/css/style.css
@@ -2,10 +2,14 @@
     --main-color: #ff66c4;
 }
 
+.color {
+    color: var(--main-color);
+}
+
 .lvjing {
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.7);
+    background: #000000b3;
     padding: 80px 0;
 }
 
@@ -16,6 +20,10 @@ html {
 
 body {
     font-family: 'PingFang SC', 'Microsoft YaHei', sans-serif;
+}
+
+section:nth-of-type(odd) {
+    background: #f5f5f5;
 }
 
 .mai-icon,
@@ -29,6 +37,24 @@ body {
     text-align: center;
     line-height: 40px;
     margin-right: 10px;
+}
+
+.navbar {
+    margin-bottom: 0;
+    border-bottom: 1px solid #e6e6e6;
+}
+
+.navbar-default .navbar-brand {
+    font-size: 30px;
+    font-weight: bold;
+    color: var(--main-color);
+    height: 70px;
+    line-height: 35px;
+    padding: 10px;
+}
+
+.navbar-toggle {
+    margin-top: 17px;
 }
 
 .navbar-brand {
@@ -46,6 +72,10 @@ body {
     border-radius: 6px;
     display: flex;
     align-items: center;
+}
+
+.navbar-default .navbar-nav>li>a:hover {
+    color: var(--main-color);
 }
 
 @media screen and (max-width: 768px) {
@@ -73,13 +103,31 @@ body {
     }
 }
 
+#home {
+    background: url(../images/banner.jpg);
+    background-size: cover;
+    background-position: center;
+    position: relative;
+}
+
 .banner {
     text-align: center;
     color: #fff;
-    padding: 60px 40px;
-    background: url(../images/banner.jpg);
-    background-size: cover;
+    padding: 80px 40px;
     margin-bottom: 0;
+    background-color: transparent;
+    position: relative;
+    z-index: 99;
+}
+
+#home::after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(to bottom, transparent, #000);
+    left: 0;
+    top: 0;
 }
 
 .banner h1 {
@@ -97,10 +145,6 @@ body {
     border-radius: 8px;
 }
 
-#bbs .col-md-4:hover {
-    background: #f1f1f1;
-}
-
 #bbs a {
     color: #212121;
     text-decoration: none;
@@ -108,11 +152,6 @@ body {
 
 #bbs img {
     margin: 0 auto;
-}
-
-
-#about {
-    background: #f8f8f8;
 }
 
 #about .container .content .item {
@@ -144,7 +183,9 @@ body {
 
 #about,
 #bootstrap,
-#store {
+#store,
+#course,
+#vip {
     padding: 80px 0 100px;
 }
 
@@ -156,6 +197,13 @@ body {
 #about p,
 #bootstrap p {
     line-height: 25px;
+}
+
+#course h2,
+#store h2,
+#vip h2 {
+    font-weight: bold;
+    margin-bottom: 30px;
 }
 
 #course .flex-box {
@@ -183,6 +231,8 @@ body {
 #course .case-img {
     width: 100%;
     height: auto;
+    border: 2px solid #eee;
+    border-radius: 8px;
 }
 
 #store .image {
@@ -241,7 +291,7 @@ body {
 }
 
 #contact .imgs {
-    width: min(90%, 420px);
+    width: min(90%, 360px);
     padding: 0;
     display: flex;
     flex-wrap: wrap;
@@ -252,7 +302,8 @@ body {
 }
 
 #contact .imgs .img-responsive {
-    height: 200px;
+    height: 160px;
+    width: 160px;
     object-fit: cover;
     border: 10px solid #fff;
     filter: brightness(0.9);
@@ -273,10 +324,47 @@ body {
     color: #fff;
 }
 
-/*footer*/
 footer {
     font-weight: 400;
     text-align: center;
     padding: 20px;
     color: #999;
+}
+
+#vip .flex-box {
+    display: flex;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+#vip .flex-box .img img {
+    width: 160px;
+    height: 160px;
+    object-fit: cover;
+    border: 10px solid #fff;
+    border-radius: 8px;
+    transition: all .3s;
+}
+
+#vip .flex-box .img:hover {
+    transform: scale(1.1);
+}
+
+#vip .flex-box .img:hover img {
+    box-shadow: 0 0 20px 0 #0003;
+}
+
+#vip .flex-box .img {
+    display: flex;
+    margin: 20px;
+    flex-direction: column;
+    align-items: center;
+    transition: all .3s;
+}
+
+#vip .flex-box .img p {
+    white-space: nowrap;
+    margin: 8px 0 12px;
 }
