--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,11 @@
     --main-color: #ff66c4;
 }
 
+video {
+    user-select: none;
+    pointer-events: none;
+}
+
 .color {
     color: var(--main-color);
 }
@@ -104,30 +109,45 @@ section:nth-of-type(odd) {
 }
 
 #home {
-    background: url(../images/banner.jpg);
+    /* background: url(../images/banner.jpg);
     background-size: cover;
-    background-position: center;
+    background-position: center; */
     position: relative;
+}
+
+#home .banner .video {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    z-index: -1;
+}
+
+#home .banner .video video {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+#home .video::after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(to bottom, transparent, #000e);
+    left: 0;
+    top: 0;
 }
 
 .banner {
     text-align: center;
     color: #fff;
-    padding: 80px 40px;
+    padding: 200px 40px;
     margin-bottom: 0;
     background-color: transparent;
     position: relative;
     z-index: 99;
-}
-
-#home::after {
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background: linear-gradient(to bottom, transparent, #000);
-    left: 0;
-    top: 0;
 }
 
 .banner h1 {
