--- a/css/style.css
+++ b/css/style.css
@@ -131,6 +131,12 @@ section:nth-of-type(odd) {
     object-fit: cover;
 }
 
+@media screen and (max-width: 768px) {
+    #home .banner .video video {
+        display: none;
+    }
+}
+
 #home .video::after {
     content: "";
     position: absolute;
