--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,11 @@ html {
 }
 
 body {
-    font-family: 'PingFang SC', 'Microsoft YaHei', sans-serif;
+    font-family: 'Noto Sans SC', -apple-system, BlinkMacSystemFont, 'Helvetica Neue', Arial,
+        'PingFang SC', 'Hiragino Sans GB', STHeiti, 'Microsoft YaHei',
+        'Microsoft JhengHei', 'Source Han Sans SC', 'Noto Sans CJK SC',
+        'Source Han Sans CN', 'Source Han Sans TC', 'Noto Sans CJK TC',
+        'WenQuanYi Micro Hei', SimSun, sans-serif;
 }
 
 section:nth-of-type(odd) {
