--- a/css/font.css
+++ b/css/font.css
@@ -6,7 +6,7 @@
     font-display: swap;
 }
 
-@font-face {
+/* @font-face {
     font-family: 'PingFang SC';
     src: url('https://cdn.jsdelivr.net/gh/yi-gou/yi-gou.github.io/fonts/PingFangSC-Semibold.otf');
     font-weight: bold;
@@ -28,7 +28,7 @@
     font-weight: 300;
     font-style: normal;
     font-display: swap;
-}
+} */
 
 @font-face {
     font-family: 'PingFang SC';
@@ -38,10 +38,10 @@
     font-display: swap;
 }
 
-@font-face {
+/* @font-face {
     font-family: 'PingFang SC';
     src: url('https://cdn.jsdelivr.net/gh/yi-gou/yi-gou.github.io/fonts/PingFangSC-Thin.otf');
     font-weight: 100;
     font-style: normal;
     font-display: swap;
-}
+} */
